<resources>
    <string name="app_name">Weight Tracker</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="settings">Settings</string>
    <string name="weight">Weight (lbs)</string>
    <string name="log">Log</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="exDate">Oct-07-2021</string>
    <string name="exWeight">180</string>
    <string name="number">Phone Number</string>
    <string name="update">Update Weight</string>
    <string name="goal">Goal (lbs)</string>
    <string name="sendSMS">Send SMS Notifications</string>

    <!-- Errors -->
    <string name="errorEnterUsername">Enter a username</string>
    <string name="errorEnterPassword">Enter a password</string>
    <string name="errorLoginIncorrect">Username or password incorrect</string>
    <string name="errorUserlength">User must be at least 5 characters</string>
    <string name="errorPasswordlength">Password must be at least 8 characters</string>
    <string name="errorPasswordmismatch">Password and confirmation must match</string>
    <string name="errorUsernameExists">Username is taken</string>
    <string name="errorUnknown">Unknown error has occurred</string>
    <string name="errorEmptyWeight">Please enter a weight</string>

    <!-- Notifications -->
    <string name="userRegistered">User has been registered</string>
    <string name="goalUpdated">Goal has been updated</string>
    <string name="weightLogged">Weight has been logged</string>
</resources>