<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

    <TableRow>
        <TextView
            android:id="@+id/dateField"
            android:layout_weight="2"
            android:textSize="16dp"
            android:padding="10sp"
            android:text="@string/exDate" />
        <TextView
            android:id="@+id/weightField"
            android:layout_weight="2"
            android:padding="10sp"
            android:textSize="16dp"
            android:text="@string/exWeight"/>
        <Button
            android:id="@+id/editBtn"
            android:layout_weight="1"
            android:padding="10sp"
            android:text="@string/edit" />
    </TableRow>

    </TableLayout>

</LinearLayout>