<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp">

        <TableRow>
            <TextView
                android:layout_span="2"
                android:text="@string/login"
                android:textSize="24sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/username"/>
            <EditText
                android:id="@+id/username"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/password"/>
            <EditText
                android:id="@+id/password"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/loginBtn"
                android:layout_span="2"
                android:text="@string/login" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/registerBtn"
                android:layout_span="2"
                android:text="@string/register"
                android:onClick="startRegister" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>