<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/logSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/weight"
                android:textSize="24sp"/>

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/enteredWeight"
                android:maxLines="1"
                android:inputType="number"
                />

            <Button
                android:id="@+id/logBtn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/log" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/goalSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/logSection"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/goal"
            android:textSize="24sp"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/goalWeight"
            android:layout_marginLeft="20dp"
            android:textSize="24sp" /> />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TableLayout
        android:id="@+id/weightsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/goalSection"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TableRow>
            <TextView
                android:layout_weight="2"
                android:text="@string/date"
                android:theme="@style/logHeading" />
            <TextView
                android:layout_weight="2"
                android:text="@string/weight"
                android:theme="@style/logHeading" />
            <TextView
                android:layout_weight="1"
                android:theme="@style/logHeading" />
        </TableRow>

    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weightsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/weightsHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>